Apply code improvements suggested by IDE